--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,3 +11,8 @@ services:
     image: redis:7.4.5-alpine
     ports: 
       - "6379:6379"
+    volumes:
+      - redis_data:/data
+
+volumes:
+  redis_data:
